test/analyzer/input_programs/invalid_programs/program12.tea
# valid range
1..12 by 5

# invalid since the beginning
# of the range is not an integer
3.4...6 by 1